about page added

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -6,3 +6,4 @@ Login:                  Login
 Logout:                 Logout
 About:                  About
 Admin Page:             Admin Page
+action.save:            Save
